<resources>
    <string name="app_name">Favorites Movies</string>

    <!-- Login -->
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="registrar">Registrar</string>
    <string name="voltar">Voltar</string>
    <string name="cadastrar">Cadastre-se</string>
    <string name="entrar">Entrar</string>
    <string name="esquecerSenha">Esqueceu sua senha?</string>
    <string name="email2">Email:</string>
    <string name="id">Id:</string>
    <string name="logout">Logout</string>
    <string name="redefinirSenha">Redefinir Senha</string>


    <!-- Movies -->
    <string name="action_filmes">Filmes</string>
    <string name="action_favoritos">Favoritos</string>
    <string name="name_movie">Titulo do Filme</string>
    <string name="movie_details">Detalhes do Filme</string>
    <string name="plot">Sinopse</string>
    <string name="rating">Avaliação do usuário</string>
    <string name="release">Data de lançamento</string>
    <string name="pref_sort_order_label">Ordem de classificação</string>
    <string name="pref_sort_order_key">ordemDeClassificacao</string>
    <string name="pref_most_popular">Filme mais popular</string>
    <string name="pref_highest_rated">Melhor filme avaliado</string>
    <string name="favorite">Filmes Favoritos</string>
    <string name="trailer">Trailer</string>

</resources>
