<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/viewBd"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.DetailActivity"
    tools:showIn="@layout/activity_detail">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/movieTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="25dp"
                android:text="@string/name_movie"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:padding="@dimen/padding_layout"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:text="@string/name_movie"
                android:textSize="20sp"
                android:layout_below="@+id/movieTitle" />

            <TextView
                android:id="@+id/plot"
                android:text="@string/plot"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="25sp"
                android:padding="@dimen/padding_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top2"
                android:layout_below="@+id/title" />

            <TextView
                android:id="@+id/plotSynopsis"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:padding="@dimen/padding_layout"
                android:layout_below="@+id/plot" />

            <TextView
                android:id="@+id/rating"
                android:text="@string/rating"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top2"
                android:layout_below="@+id/plotSynopsis" />

            <TextView
                android:id="@+id/userRating"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:padding="@dimen/padding_layout"
                android:layout_below="@+id/rating" />

            <TextView
                android:id="@+id/release"
                android:text="@string/release"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top2"
                android:layout_below="@+id/userRating" />

            <TextView
                android:id="@+id/releaseDate"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:padding="@dimen/padding_layout"
                android:layout_below="@+id/release" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>