<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/viewBd"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.DetalharActivity"
    tools:showIn="@layout/activity_detalhe">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.github.ivbaranov.mfb.MaterialFavoriteButton
                android:id="@+id/favorite_button"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="160dp"
                app:layout_constraintBottom_toTopOf="@+id/userRating"
                app:layout_constraintLeft_toRightOf="@+id/userRating"
                app:layout_constraintRight_toLeftOf="@+id/userRating"
                app:layout_constraintTop_toBottomOf="@+id/userRating"
                android:background="@color/colorAccent"
                />

            <TextView
                android:id="@+id/movieTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="25dp"
                android:text="@string/name_movie"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/movieTitle"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:padding="@dimen/padding_layout"
                android:text="@string/name_movie"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/plot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top2"
                android:padding="@dimen/padding_layout"
                android:text="@string/plot"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/plotSynopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/plot"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:padding="@dimen/padding_layout"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/plotSynopsis"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top2"
                android:text="@string/rating"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/userRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rating"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:padding="@dimen/padding_layout"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/release"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/userRating"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top2"
                android:text="@string/release"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/releaseDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/release"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:padding="@dimen/padding_layout"
                android:textSize="20sp" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>